--- a/CSS/border_properties.css
+++ b/CSS/border_properties.css
@@ -8,3 +8,25 @@
     border: 6px solid red;
 }
 
+.b_prop3{
+    width: 250px;
+    border: 6px double blue;
+    border-radius: 50%;
+}
+.b_prop4{
+    width: 250px;
+    border: 6px double silver;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: 20px;
+
+
+}
+
+.b_prop5{
+    width: 250px;
+    border:6px double ;
+    border-radius: 50px 20px 50px 20px;
+    border-color :blue red gold silver;
+}
