--- a/CSS/Home_work.css
+++ b/CSS/Home_work.css
@@ -17,7 +17,45 @@
     align-items: center;
     display: flex;
     transition: transform 5s ease; /* transition applies to transform changes */
+    perspective: 100px;
+
 }
-.box1:hover{
+
+.box {
+    position: relative;
+    transition: transform 5s ease;
+    transform-style: preserve-3d; /*this line imp for show back text */
+}
+
+
+.box:hover{
     transform: rotateY(180deg);
 }
+
+.front, .back {
+    position: absolute;
+    backface-visibility: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    color: white; /* text color */
+    width: 100%;
+    height: 100%;
+   background-color: aqua; /* SAME color for both sides */
+
+}
+.back {
+    transform: rotateY(180deg);
+}
+
+.front {
+    background-color: aqua; /* front side color */
+}
+
+.back {
+    background-color: red;  /* back side color */
+    transform: rotateY(180deg);
+}
+
+
